--- a/index.html
+++ b/index.html
@@ -164,10 +164,10 @@
                 </div>
                 <div class="card">
                     <div class="skill-icon">
-                        <img src="img/skill/react.svg" alt="ReactNative">
+                        <img src="img/skill/react.svg" alt="React / ReactNative">
                     </div>
                    <div class="skill-desc">
-                    <h3 class="skill-desc-title">React Native</h3>
+                    <h3 class="skill-desc-title">React / React Native</h3>
                     <div class="rating">
                         <div class="rate rate3"></div>
                     </div>
@@ -200,6 +200,20 @@
                           <div class="section-text">
                                勉強中です。</div>
                             </div>
+                </div>
+                <div class="card">
+                  <div class="skill-icon">
+                    <img src="img/skill/firebase.svg" alt="Firebase">
+                  </div>
+                  <div class="skill-desc">
+                    <h3 class="skill-desc-title">Firebase</h3>
+                    <div class="rating">
+                      <div class="rate rate1"></div>
+                    </div>
+                    <div class="section-text">
+                      今開発中のものに用いるため勉強中です。
+                    </div>
+                  </div>
                 </div>
                 <div class="card">
                           <div class="skill-icon">
