--- a/index.html
+++ b/index.html
@@ -189,6 +189,19 @@
                         </div>
                 </div>
                 <div class="card">
+                  <div class="skill-icon">
+                      <img src="img/skill/ruby.svg" alt="Ruby">
+                  </div>
+                 <div class="skill-desc">
+                  <h3 class="skill-desc-title">Ruby</h3>
+                  <div class="rating">
+                      <div class="rate rate1"></div>
+                  </div>
+                  <div class="section-text">
+                       勉強中です。</div>
+                    </div>
+                  </div>
+                <div class="card">
                           <div class="skill-icon">
                               <img src="img/skill/rails.svg" alt="Rails">
                           </div>
