--- a/index.html
+++ b/index.html
@@ -172,6 +172,8 @@
                         <div class="rate rate3"></div>
                     </div>
                     <div class="section-text"></div>
+                    Reactを主に勉強しています。<br
+                    >(チャットアプリ開発中です。)
                     </div>
                 </div>
                 <div class="card">
@@ -184,7 +186,7 @@
                             <div class="rate rate3"></div>
                           </div>
                           <div class="section-text">
-                            あみだくじで遊べるWebページやTwitterアカウントの影響力を数値化するツールを作成しました。
+                            あみだくじで遊べるWebサイトやTwitterアカウントの影響力を数値化するツールを作成しました。
                           </div>
                         </div>
                 </div>
