プロフィール編集

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         坂本研究室 修士2年 篠田貴大(<a href="https://twitter.com/tttttt_621_s" target="_blank">@tttttt_621_s</a>)です。<br>
                         パソコンが好きで工業高校に進学しプログラミングを学びはじめました。<br>
                         現在は、EC(Entertainment Computing)の研究を行なっています。<br>
-                        <a href="https://takashinoda.hatenablog.com/" target="_blank">ブログ</a>もたまに書いています。<br>
+                        <a href="https://takashinoda.hatenablog.com/" target="_blank">ブログ</a>も不定期で書いています。<br>
                     </div>
                 </div>
             </div>
