--- a/index.html
+++ b/index.html
@@ -272,14 +272,14 @@
           </div>
           <div class="section-body card-wrapper my-gallery">
               <div class="card"> <!--観光地口コミサイト-->
-                <a href="img/works/tours.png" data-size="617x494" class="card-image hover-action-01">
+                <a href="img/works/tours.png" data-size="792x551" class="card-image hover-action-01">
                   <img class="lazyload fadein" src="img/works/tours.png" data-src="img/works/tours.png" alt="Tours" />
                 </a>
                 <div class="card-caption">
                   <div class="card-caption-title">観光地口コミサイト</div>
                   <div class="card-caption-info">
                       <ul>
-                          <li>URL : なし</li>
+                          <li>URL : 準備中</li>
                           <li>ソースコード : 開発中</li>
                           <li>説明 : Vue.js+Firebaseを用いた観光地の口コミサイトです。</li>
                           <li>使用した技術 : Vue.js, Firebase</li>
