成果物のURL追記

--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
                         <div class="rate rate3"></div>
                     </div>
                     <div class="section-text"></div>
-                    Reactを主に勉強しています。<br
-                    >(チャットアプリ開発中です。)
+                    Reactを主に勉強しています。
                     </div>
                 </div>
                 <div class="card">
@@ -279,7 +278,7 @@
                   <div class="card-caption-title">観光地口コミサイト</div>
                   <div class="card-caption-info">
                       <ul>
-                          <li>URL : 準備中</li>
+                          <li>URL : <a href="https://miyazaki-tours.firebaseapp.com/" target="_blank">https://miyazaki-tours.firebaseapp.com</a></li>
                           <li>ソースコード : 開発中</li>
                           <li>説明 : Vue.js+Firebaseを用いた観光地の口コミサイトです。</li>
                           <li>使用した技術 : Vue.js, Firebase</li>
