--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
                       <ul>
                           <li>URL : なし</li>
                           <li>ソースコード : <a href="https://github.com/TakaShinoda/MessageApp" target="_blank">https://github.com/TakaShinoda/MessageApp</a></li> 
-                          <li>説明 : メッセージアプリです。地域の掲示板アプリにするために開発中です。</li> 
+                          <li>説明 : メッセージアプリです。地域の回覧板アプリにするために開発中です。</li> 
                           <li>使用した技術 : React Native, GitHub</li>
                         </ul>
                   </div>
