--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="img/favicon2.ico" />
   <link rel=”canonical” href=”https://takashinoda.github.io/portfolio” />
+  <script src="https://cdn.lr-ingest.io/LogRocket.min.js" crossorigin="anonymous"></script>
+  <script>window.LogRocket && window.LogRocket.init('au7dqx/portfolio');</script>
 </head>
 
 <body>
