--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         坂本研究室 修士2年 篠田貴大(<a href="https://twitter.com/tttttt_621_s" target="_blank">@tttttt_621_s</a>)です。<br>
                         パソコンが好きで工業高校に進学しプログラミングを学びはじめました。<br>
                         現在は、EC(Entertainment Computing)の研究を行なっています。<br>
-                        <a href="https://takashinoda.hatenablog.com/" target="_blank">ブログ</a>も不定期で書いています。<br>
+                        <a href="https://takashinoda.hatenablog.com/" target="_blank">ブログ</a>での発信を行なっています。<br>
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                         <div class="rate rate3"></div>
                     </div>
                     <div class="section-text"></div>
-                    Reactを主に勉強しています。
+                    Reactを勉強しています。
                     </div>
                 </div>
                 <div class="card">
@@ -188,35 +188,9 @@
                             <div class="rate rate3"></div>
                           </div>
                           <div class="section-text">
-                            あみだくじで遊べるWebサイトやTwitterアカウントの影響力を数値化するツールを作成しました。
+                            PHP7を勉強しています。
                           </div>
                         </div>
-                </div>
-                <div class="card">
-                  <div class="skill-icon">
-                      <img src="img/skill/ruby.svg" alt="Ruby">
-                  </div>
-                 <div class="skill-desc">
-                  <h3 class="skill-desc-title">Ruby</h3>
-                  <div class="rating">
-                      <div class="rate rate1"></div>
-                  </div>
-                  <div class="section-text">
-                       勉強中です。</div>
-                    </div>
-                  </div>
-                <div class="card">
-                          <div class="skill-icon">
-                              <img src="img/skill/rails.svg" alt="Rails">
-                          </div>
-                         <div class="skill-desc">
-                          <h3 class="skill-desc-title">Ruby on Rails</h3>
-                          <div class="rating">
-                              <div class="rate rate1"></div>
-                          </div>
-                          <div class="section-text">
-                               勉強中です。</div>
-                            </div>
                 </div>
                 <div class="card">
                   <div class="skill-icon">
@@ -225,10 +199,10 @@
                   <div class="skill-desc">
                     <h3 class="skill-desc-title">Firebase</h3>
                     <div class="rating">
-                      <div class="rate rate1"></div>
+                      <div class="rate rate3"></div>
                     </div>
                     <div class="section-text">
-                      今開発中のものに用いるため勉強中です。
+                      Vue.jsでの口コミサイトの開発で使用しています。
                     </div>
                   </div>
                 </div>
@@ -272,6 +246,38 @@
             </div>
           </div>
           <div class="section-body card-wrapper my-gallery">
+              <div class="card"> <!--ポートフォリオサイト-->
+                <a href="img/works/portfoliosite.png" data-size="954x480" class="card-image hover-action-01">
+                  <img class="lazyload fadein" src="img/works/portfoliosite.png" data-src="img/works/portfoliosite.png" alt="portfolio" />
+                </a>
+                <div class="card-caption">
+                  <div class="card-caption-title">Portfolioサイト</div>
+                  <div class="card-caption-info">
+                      <ul>
+                          <li>URL : <a href="https://TakaShinoda.github.io/portfolio/" target="_blank">https://TakaShinoda.github.io/portfolio/</a><li> 
+                          <li>ソースコード : <a href="https://github.com/TakaShinoda/portfolio" target="_blank">https://github.com/TakaShinoda/portfolio</a></li>
+                          <li>説明 : ご覧いただいているこのサイトです。(写真は宮崎県青島)</li>
+                          <li>使用した技術 : HTML5, CSS3, JavaScript, GitHub</li>
+                      </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="card"> <!--TinderUI-->
+                <a href="img/works/TinderUI.png" data-size="306x546" class="card-image hover-action-01">
+                  <img class="lazyload fadein" src="img/works/TinderUI.png" data-src="img/works/TinderUI.png" alt="TinderUI" />
+                </a>
+                <div class="card-caption">
+                  <div class="card-caption-title">マッチングアプリ風UI</div>
+                  <div class="card-caption-info">
+                      <ul>
+                          <li>URL : 準備中<li> 
+                          <li>ソースコード : <a href="https://github.com/TakaShinoda/TinderUI/" target="_blank">https://github.com/TakaShinoda/TinderUI</a></li>
+                          <li>説明 : マッチングアプリ風のUIです。スワイプ、カードの下部タップで詳細が表示ができます。</li>
+                          <li>使用した技術 : React.js, css3, GitHub</li>
+                      </ul>
+                  </div>
+                </div>
+              </div>
               <div class="card"> <!--観光地口コミサイト-->
                 <a href="img/works/tours.png" data-size="792x551" class="card-image hover-action-01">
                   <img class="lazyload fadein" src="img/works/tours.png" data-src="img/works/tours.png" alt="Tours" />
@@ -288,22 +294,6 @@
                     </div>
                   </div>
                 </div>
-            <div class="card"> <!--ポートフォリオサイト-->
-              <a href="img/works/portfoliosite.png" data-size="954x480" class="card-image hover-action-01">
-                <img class="lazyload fadein" src="img/works/portfoliosite.png" data-src="img/works/portfoliosite.png" alt="portfolio" />
-              </a>
-              <div class="card-caption">
-                <div class="card-caption-title">Portfolioサイト</div>
-                <div class="card-caption-info">
-                    <ul>
-                        <li>URL : <a href="https://TakaShinoda.github.io/portfolio/" target="_blank">https://TakaShinoda.github.io/portfolio/</a><li> 
-                        <li>ソースコード : <a href="https://github.com/TakaShinoda/portfolio" target="_blank">https://github.com/TakaShinoda/portfolio</a></li>
-                        <li>説明 : ご覧いただいているこのサイトです。(写真は宮崎県青島)</li>
-                        <li>使用した技術 : HTML5, CSS3, JavaScript, GitHub</li>
-                    </ul>
-                </div>
-              </div>
-            </div>
             <div class="card"> <!--ToDoリスト-->
                 <a href="img/works/ToDo.jpg" data-size="740x791" class="card-image hover-action-01">
                   <img class="lazyload fadein" src="img/works/ToDo.jpg" data-src="img/works/ToDo.jpg" alt="ToDolist" />
