--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                   <div class="card-caption-info">
                       <ul>
                           <li>URL : 準備中<li> 
-                          <li>ソースコード : <a href="https://github.com/TakaShinoda/TinderUI/" target="_blank">https://github.com/TakaShinoda/TinderUI</a></li>
+                          <li>ソースコード : <a href="https://github.com/TakaShinoda/CardUI" target="_blank">https://github.com/TakaShinoda/CardUI</a></li>
                           <li>説明 : マッチングアプリ風のUIです。スワイプ、カードの下部タップで詳細が表示ができます。</li>
                           <li>使用した技術 : React.js, css3, GitHub</li>
                       </ul>
