--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                   <div class="skill-desc">
                     <h3 class="skill-desc-title">CSS3</h3>
                     <div class="rating">
-                      <div class="rate rate4"></div>
+                      <div class="rate rate3"></div>
                     </div>
                     <div class="section-text">
                       予測、保守、再利用、拡張しやすいコードをかけるように勉強中です。</div>
@@ -174,10 +174,25 @@
                     <div class="rating">
                         <div class="rate rate3"></div>
                     </div>
-                    <div class="section-text"></div>
-                    Reactを勉強しています。
+                    <div class="section-text">
+                      React Reduxを勉強しています。
+                    </div>
                     </div>
                 </div>
+                <div class="card">
+                  <div class="skill-icon">
+                      <img src="img/skill/nextjs-3.svg" alt="next.js">
+                  </div>
+                 <div class="skill-desc">
+                  <h3 class="skill-desc-title">Next.js</h3>
+                  <div class="rating">
+                      <div class="rate rate2"></div>
+                  </div>
+                  <div class="section-text">
+                    現在React+Next+Firebaseで開発を行なっています
+                  </div>
+                  </div>
+              </div>
                 <div class="card">
                         <div class="skill-icon">
                           <img src="img/skill/php.svg" alt="PHP">
@@ -202,7 +217,7 @@
                       <div class="rate rate3"></div>
                     </div>
                     <div class="section-text">
-                      Vue.jsでの口コミサイトの開発で使用しています。
+                      VueやReactのプロジェクトのサーバサイドで使用しています。
                     </div>
                   </div>
                 </div>
@@ -256,8 +271,24 @@
                       <ul>
                           <li>URL : <a href="https://TakaShinoda.github.io/portfolio/" target="_blank">https://TakaShinoda.github.io/portfolio/</a><li> 
                           <li>ソースコード : <a href="https://github.com/TakaShinoda/portfolio" target="_blank">https://github.com/TakaShinoda/portfolio</a></li>
-                          <li>説明 : ご覧いただいているこのサイトです。(写真は宮崎県青島)</li>
-                          <li>使用した技術 : HTML5, CSS3, JavaScript, GitHub</li>
+                          <li>説明 : ご覧いただいているこのサイトです。</li>
+                          <li>使用した技術 : HTML5, css3, JavaScript, GitHub</li>
+                      </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="card"> <!--連絡板、ゴミローテ-->
+                <a href="img/works/whiteboard.png" data-size="980x811" class="card-image hover-action-01">
+                  <img class="lazyload fadein" src="img/works/whiteboard.png" data-src="img/works/whiteboard.png" alt="whiteboard" />
+                </a>
+                <div class="card-caption">
+                  <div class="card-caption-title">Portfolioサイト</div>
+                  <div class="card-caption-info">
+                      <ul>
+                          <li>URL : <a href="https://labapp-75272.firebaseapp.com/" target="_blank">https://labapp-75272.firebaseapp.com/</a><li> 
+                          <li>ソースコード : <a href="https://github.com/TakaShinoda/Whiteboard" target="_blank">https://github.com/TakaShinoda/Whiteboard</a></li>
+                          <li>説明 : 研究室のホワイトボードに書かれている連絡等をWebで管理できるツール</li>
+                          <li>使用した技術 : React, Next.js, Firebase, GitHub</li>
                       </ul>
                   </div>
                 </div>
