--- a/index.html
+++ b/index.html
@@ -51,16 +51,15 @@
             </div>
             <div class="section-body">
                 <div class="section-image">
-                    <img class="lazyload fadein" data-src="img/about/topimg.jpg" alt="トプ画">
+                    <img class="lazyload fadein" data-src="img/about/profile.jpg" alt="トプ画">
                 </div>
                 <div class="section-desc">
                     <div class="section-text">
                         こんにちは！<br>
                         宮崎大学大学院 工学研究科 工学専攻 機械・情報系コース<br>
                         坂本研究室 修士2年 篠田貴大(<a href="https://twitter.com/tttttt_621_s" target="_blank">@tttttt_621_s</a>)です。<br>
-                        パソコンが好きで工業高校に進学しプログラミングを学びはじめました。<br>
                         現在は、EC(Entertainment Computing)の研究を行なっています。<br>
-                        <a href="https://takashinoda.hatenablog.com/" target="_blank">ブログ</a>での発信を行なっています。<br>
+                        <a href="https://takashinoda.hatenablog.com/" target="_blank">ブログ</a>もやってます。<br>
                     </div>
                 </div>
             </div>
@@ -256,7 +255,7 @@
             <div class="section-intro">
               <div class="section-text">
                 制作物の記録<br class="pc">
-                <p><a href="./works.zip" download="works.zip">ダウンロードはこちら<i class="fas fa-download"></i></a></p>
+                <p><a href="./works.zip" download="works.zip">ダウンロードはこちら(現在改良中のためダウンロード非推奨)<i class="fas fa-download"></i></a></p>
               </div>
             </div>
           </div>
@@ -287,8 +286,8 @@
                       <ul>
                           <li>URL : <a href="https://labapp-75272.firebaseapp.com/" target="_blank">https://labapp-75272.firebaseapp.com/</a><li> 
                           <li>ソースコード : <a href="https://github.com/TakaShinoda/Whiteboard" target="_blank">https://github.com/TakaShinoda/Whiteboard</a></li>
-                          <li>説明 : 研究室のホワイトボードに書かれている連絡等をWebで管理できるツール</li>
-                          <li>使用した技術 : React, Next.js, Firebase, GitHub</li>
+                          <li>説明 : 研究室のホワイトボードに書かれている連絡等をWebで管理できるツール(開発中)</li>
+                          <li>使用した技術 : React Redux, Next.js, Firebase, GitHub</li>
                       </ul>
                   </div>
                 </div>
@@ -304,7 +303,7 @@
                           <li>URL : 準備中<li> 
                           <li>ソースコード : <a href="https://github.com/TakaShinoda/CardUI" target="_blank">https://github.com/TakaShinoda/CardUI</a></li>
                           <li>説明 : マッチングアプリ風のUIです。スワイプ、カードの下部タップで詳細が表示ができます。</li>
-                          <li>使用した技術 : React.js, css3, GitHub</li>
+                          <li>使用した技術 : React, css3, GitHub</li>
                       </ul>
                   </div>
                 </div>
