--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                         <div class="rate rate3"></div>
                     </div>
                     <div class="section-text">
-                      React Reduxを勉強しています。
+                      Reactを勉強しています。
                     </div>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
                       <div class="rate rate3"></div>
                     </div>
                     <div class="section-text">
-                      VueやReactのプロジェクトのサーバサイドで使用しています。
+                      VueやReactのプロジェクトで使用しています。
                     </div>
                   </div>
                 </div>
