--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
                   <img class="lazyload fadein" src="img/works/whiteboard.png" data-src="img/works/whiteboard.png" alt="whiteboard" />
                 </a>
                 <div class="card-caption">
-                  <div class="card-caption-title">Portfolioサイト</div>
+                  <div class="card-caption-title">Whiteboard</div>
                   <div class="card-caption-info">
                       <ul>
                           <li>URL : <a href="https://labapp-75272.firebaseapp.com/" target="_blank">https://labapp-75272.firebaseapp.com/</a><li> 
