--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                           <li>URL : <a href="https://TakaShinoda.github.io/portfolio/" target="_blank">https://TakaShinoda.github.io/portfolio/</a><li> 
                           <li>ソースコード : <a href="https://github.com/TakaShinoda/portfolio" target="_blank">https://github.com/TakaShinoda/portfolio</a></li>
                           <li>説明 : ご覧いただいているこのサイトです。</li>
-                          <li>使用した技術 : HTML5, css3, JavaScript, GitHub</li>
+                          <li>使用した技術 : HTML5, CSS3, JavaScript, GitHub</li>
                       </ul>
                   </div>
                 </div>
@@ -303,7 +303,7 @@
                           <li>URL : 準備中<li> 
                           <li>ソースコード : <a href="https://github.com/TakaShinoda/CardUI" target="_blank">https://github.com/TakaShinoda/CardUI</a></li>
                           <li>説明 : マッチングアプリ風のUIです。スワイプ、カードの下部タップで詳細が表示ができます。</li>
-                          <li>使用した技術 : React, css3, GitHub</li>
+                          <li>使用した技術 : React, CSS3, GitHub</li>
                       </ul>
                   </div>
                 </div>
